set(TargetName UnitTest)

set(SERVER_PROJECT_TEST_DIR ${CMAKE_SOURCE_DIR}/test)

file(GLOB_RECURSE UNITTEST_SRC_FILES ${SERVER_PROJECT_SRC_DIR}/*_unittest.cc)
file(GLOB TEST_SOURCE_FILES ${SERVER_PROJECT_TEST_DIR}/*.cc)

include_directories(${SERVER_PROJECT_3RDPARTY_DIR}/googletest)

set(SOURCE_FILES
	${UNITTEST_SRC_FILES}
	${TEST_SOURCE_FILES}
	${SERVER_PROJECT_3RDPARTY_DIR}/googletest/src/gtest-all.cc
	)
	
add_executable(${TargetName} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TargetName} STATIC ${TARGET_LIB_NAME})
